Frontend, Zone Service logging, set production configs, add expenses methods